[package]
name = "lolaland"
version = "0.0.2"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.12.0", features = ["nightly"] }
specs-derive = "0.4"
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.specs-physics]
path = "../olvyko-specs-physics/specs-physics"
features = ["amethyst", "physics2d"]

# [dependencies.specs-physics]
# git = "https://github.com/olvyko/specs-physics.git"
# rev = "e71dc203ada2716ac7b9b644105833a62115b0d1"
# features = ["amethyst", "physics2d"]

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]

