[package]
name = "lolaland"
version = "0.0.2"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.14.0" }
specs-derive = "0.4"
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]

